--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "reason-react": "^0.7.0",
+    "slug": "^2.1.1",
     "socket.io-client": "^2.3.0",
     "tailwindcss": "^1.2.0",
     "use-immer": "^0.4.0",
