--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.3",
+    "@testing-library/user-event": "^10.1.0",
     "autoprefixer": "^9.7.6",
-    "bs-socket": "^1.2.2",
-    "postcss-cli": "^7.1.0",
+    "postcss-cli": "^7.1.1",
+    "re-classnames": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "reason-react": "^0.7.0",
+    "reason-react": "^0.7.1",
     "slug": "^2.1.1",
     "socket.io-client": "^2.3.0",
-    "tailwindcss": "^1.2.0",
-    "use-immer": "^0.4.0",
-    "use-socket.io-client": "^1.1.0"
+    "tailwindcss": "^1.3.5"
   },
   "scripts": {
     "re:build": "bsb -make-world -clean-world",
